Bug #1244 - Mobile iOS: text overflows boxes on MOL profile

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1203,6 +1203,9 @@ body{
     padding: 0 1.5%;
     .table{
         td{
+            a{
+                word-wrap:break-word;
+            }
             &:first-child{
                 width: 45%;
             }
